// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders blank 1`] = `
Object {
  "output": <Component
    style={
      Object {
        "marginBottom": 12,
      }
    }
  >
    <Card>
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingTop": 12,
          }
        }
      >
        <Icon
          name="passenger"
        />
        <WithTheme
          size="large"
          style={
            Object {
              "flex": 1,
            }
          }
        >
            
        </WithTheme>
      </Component>
      <Component
        style={
          Object {
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
          }
        }
      >
        <PassengerCardDetail
          label="Nationality"
          style="normal"
          value=""
        />
        <PassengerCardDetail
          label="Date of birth"
          style="normal"
          value="-"
        />
        <PassengerCardDetail
          label="ID"
          style="id_row_wrapper"
          value=""
        />
      </Component>
      <Separator />
      <Component
        style={
          Object {
            "flexDirection": "row",
            "height": 120,
            "justifyContent": "space-between",
            "paddingTop": 12,
          }
        }
      >
        <Component
          style={
            Object {
              "flexGrow": 3,
            }
          }
        >
          <WithTheme
            style={
              Object {
                "paddingBottom": 8,
              }
            }
            type="secondary"
          >
            Bags
          </WithTheme>
          <Component />
        </Component>
      </Component>
    </Card>
  </Component>,
}
`;

exports[`renders with passenger info 1`] = `
Object {
  "output": <Component
    style={
      Object {
        "marginBottom": 12,
      }
    }
  >
    <Card>
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingBottom": 16,
            "paddingTop": 12,
          }
        }
      >
        <Icon
          name="passenger"
        />
        <WithTheme
          size="large"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          Mr. John Doe 
        </WithTheme>
      </Component>
      <Component
        style={
          Object {
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
          }
        }
      >
        <PassengerCardDetail
          label="Nationality"
          style="normal"
          value="Russian"
        />
        <PassengerCardDetail
          label="Date of birth"
          style="normal"
          value="04/12/1980"
        />
        <PassengerCardDetail
          label="ID"
          style="id_row_wrapper"
          value="DF45SV9"
        />
      </Component>
      <Separator />
      <Component
        style={
          Object {
            "flexDirection": "row",
            "height": 120,
            "justifyContent": "space-between",
            "paddingTop": 12,
          }
        }
      >
        <Component
          style={
            Object {
              "flexGrow": 3,
            }
          }
        >
          <WithTheme
            style={
              Object {
                "paddingBottom": 8,
              }
            }
            type="secondary"
          >
            Bags
          </WithTheme>
          <Component>
            <BagInformation
              count={1}
              type="11 x 32 x 70 cm, 10 kg"
            />
            <BagInformation
              count={2}
              type="40 x 52 x 78 cm, 10 kg"
            />
          </Component>
        </Component>
        <PassengerCardDetail
          label="Travel Insurance"
          style="normal"
          value="Travel Inusurance Name"
        />
      </Component>
    </Card>
  </Component>,
}
`;
